[gd_scene load_steps=3 format=3 uid="uid://c5i2qviw4cmu2"]

[ext_resource type="Texture2D" uid="uid://1yc6pjqt5yb" path="res://assets/ui_bar_foreground.png" id="1_0hnkw"]
[ext_resource type="Script" path="res://scenes/ComboBar.gd" id="1_o0wj5"]

[node name="ComboBar" type="HBoxContainer"]
script = ExtResource("1_o0wj5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 74.0
offset_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 74.0
offset_bottom = 26.0
text = "COMBO!!!"

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 74.0
offset_bottom = 32.0
step = 0.0
value = 100.0
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("1_0hnkw")
texture_progress = ExtResource("1_0hnkw")
tint_under = Color(1, 0, 0, 1)
tint_progress = Color(1, 1, 0, 1)

[node name="MultiplierLabel" type="Label" parent="."]
offset_left = 78.0
offset_top = 3.0
offset_right = 114.0
offset_bottom = 29.0
text = "x 3.0"
